--- a/static/offline.html
+++ b/static/offline.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/offline.css">
+    <link rel="stylesheet" type="text/css" href="/offline.css">
   </head>
   <body>
     <div class="w-screen h-screen flex flex-col overflow-hidden">
