disregards routes in parens

--- a/static/offline.html
+++ b/static/offline.html
@@ -12,7 +12,7 @@
         <span class="text-5xl font-semibold text-white">Mezo</span>
       </nav>
       <div class="w-full flex flex-col flex-grow items-center justify-center bg-gray-800">
-        <h1 class="text-4xl font-bold p-4 text-rainbow">
+        <h1 class="text-4xl font-bold p-4 text-center text-rainbow">
           Hello Offline!
         </h1>
       </div>
