imported tailwindcss in offline.html so classes could be removed from offline.css

--- a/static/offline.html
+++ b/static/offline.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/offline.css">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com/3.3.2"></script>
   </head>
   <body>
     <div class="w-screen h-screen flex flex-col overflow-hidden">
